# project1_fastapi_backend

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
app/core/: config.py  dependencies.py  email.py  security.py
app/db/: session.py
app/models/: password_reset.py  refresh_token.py  user.py
app/routers/: auth.py  users.py
app/schemas/: token.py  user.py
